@@ -2,7 +2,7 @@ package com.capstone.construction.application.business.installationform;
 
 import com.capstone.common.enumerate.*;
 import com.capstone.common.response.WrapperApiResponse;
-import com.capstone.common.utils.BaseFilterRequest;
+import com.capstone.common.request.BaseFilterRequest;
 import com.capstone.construction.application.business.estimate.CostEstimateService;
 import com.capstone.construction.application.dto.request.estimate.CreateRequest;
 import com.capstone.construction.application.dto.request.installationform.ApproveRequest;
@@ -13,6 +13,7 @@ import com.capstone.construction.infrastructure.utils.Message;
 import com.capstone.construction.infrastructure.persistence.*;
 import com.capstone.construction.infrastructure.service.*;
 import org.jspecify.annotations.NonNull;
+import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
 import org.junit.jupiter.api.extension.ExtendWith;
 import org.mockito.InjectMocks;
@@ -20,6 +21,7 @@ import org.mockito.Mock;
 import org.mockito.junit.jupiter.MockitoExtension;
 import org.springframework.data.domain.*;
 import org.springframework.data.jpa.domain.Specification;
+import org.springframework.test.util.ReflectionTestUtils;
 
 import java.time.*;
 import java.util.*;
@@ -41,9 +43,21 @@ class InstallationFormServiceImplTest {
   private DeviceService owmSrv;
   @Mock
   private CostEstimateService costEstimateService;
+  @Mock
+  private CostEstimateRepository costEstimateRepo;
 
   @InjectMocks
   private InstallationFormServiceImpl service;
+
+  @BeforeEach
+  void setUp() {
+    ReflectionTestUtils.setField(service, "costEstimateRepo", costEstimateRepo);
+    ReflectionTestUtils.setField(service, "ifRepo", ifRepo);
+    ReflectionTestUtils.setField(service, "wsnRepo", wsnRepo);
+    ReflectionTestUtils.setField(service, "costEstimateService", costEstimateService);
+    ReflectionTestUtils.setField(service, "empSrv", empSrv);
+    ReflectionTestUtils.setField(service, "owmSrv", owmSrv);
+  }
 
   private static final String USER_ID = "EMP-001";
 
@@ -214,7 +228,7 @@ class InstallationFormServiceImplTest {
     var result = service.getInstallationForms(pageable, request);
 
     // Then
-    assertThat(result.getContent().get(0).handoverByFullName()).isEqualTo("Trống");
+    assertThat(result.getContent().getFirst().handoverByFullName()).isEqualTo("Trống");
   }
 
   @Test
@@ -231,7 +245,75 @@ class InstallationFormServiceImplTest {
     var result = service.getInstallationForms(pageable, request);
 
     // Then
-    assertThat(result.getContent().get(0).handoverByFullName()).isEqualTo("Trống");
+    assertThat(result.getContent().getFirst().handoverByFullName()).isEqualTo("Trống");
+  }
+
+  @Test
+  void should_ReturnPendingEstimateForms_When_RepositoryReturnsData() {
+    // Given
+    var pageable = PageRequest.of(0, 10);
+    var entity = createMockEntity();
+    when(ifRepo.findByEstimateStatus_Pending(pageable)).thenReturn(new PageImpl<>(List.of(entity)));
+    when(empSrv.getEmployeeNameById(any())).thenReturn(new WrapperApiResponse(200, "OK", "Staff", OffsetDateTime.now()));
+
+    // When
+    var result = service.findByEstimateStatusPending(pageable);
+
+    // Then
+    assertThat(result.getContent()).hasSize(1);
+    verify(ifRepo).findByEstimateStatus_Pending(pageable);
+  }
+
+  @Test
+  void should_ReturnPendingRegistrationForms_When_RepositoryReturnsData() {
+    // Given
+    var pageable = PageRequest.of(0, 10);
+    var entity = createMockEntity();
+    when(ifRepo.findByRegistrationStatus_Pending(pageable)).thenReturn(new PageImpl<>(List.of(entity)));
+    when(empSrv.getEmployeeNameById(any()))
+      .thenReturn(new WrapperApiResponse(200, "OK", "Staff", OffsetDateTime.now()));
+
+    // When
+    var result = service.findByRegistrationStatusPending(pageable);
+
+    // Then
+    assertThat(result.getContent()).hasSize(1);
+    verify(ifRepo).findByRegistrationStatus_Pending(pageable);
+  }
+
+  @Test
+  void should_ReturnReviewedForms_When_RepositoryReturnsData() {
+    // Given
+    var entity1 = createMockEntity();
+    var entity2 = createMockEntity();
+    when(ifRepo.findByEstimateStatus(ProcessingStatus.APPROVED.name())).thenReturn(List.of(entity1));
+    when(ifRepo.findByEstimateStatus(ProcessingStatus.REJECTED.name())).thenReturn(List.of(entity2));
+    when(empSrv.getEmployeeNameById(any())).thenReturn(new WrapperApiResponse(200, "OK", "Staff", OffsetDateTime.now()));
+
+    // When
+    var result = service.getReviewedInstallationFormsList();
+
+    // Then
+    assertThat(result.approved()).hasSize(1);
+    assertThat(result.rejected()).hasSize(1);
+    verify(ifRepo).findByEstimateStatus(ProcessingStatus.APPROVED.name());
+    verify(ifRepo).findByEstimateStatus(ProcessingStatus.REJECTED.name());
+  }
+
+  @Test
+  void should_ReturnAssignedForms_When_RepositoryReturnsData() {
+    // Given
+    var pageable = PageRequest.of(0, 10);
+    var entity = createMockEntity();
+    when(ifRepo.findByHandoverByIsNotNull(pageable)).thenReturn(new PageImpl<>(List.of(entity)));
+    when(empSrv.getEmployeeNameById(any())).thenReturn(new WrapperApiResponse(200, "OK", "Staff", OffsetDateTime.now()));
+
+    // When
+    var result = service.findByHandoverByIsNotNull(pageable);
+
+    // Then
+    assertThat(result.getContent()).hasSize(1);
+    verify(ifRepo).findByHandoverByIsNotNull(pageable);
   }
 
   @Test
@@ -317,45 +399,6 @@ class InstallationFormServiceImplTest {
   }
 
   @Test
-  void should_GetConstructionRequestsList_When_ValidRequest() {
-    // Given
-    var pageable = PageRequest.of(0, 10);
-    var request = new BaseFilterRequest("keyword", "2024-01-01", "2024-01-31");
-    var entity = createMockEntity();
-
-    when(ifRepo.findAll(any(Specification.class), eq(pageable))).thenReturn(new PageImpl<>(List.of(entity)));
-    when(empSrv.getEmployeeNameById(any())).thenReturn(new WrapperApiResponse(200, "OK", "Staff", OffsetDateTime.now()));
-
-    // When
-    var result = service.getConstructionRequestsList(pageable, request);
-
-    // Then
-    assertThat(result.getContent()).hasSize(1);
-    verify(ifRepo).findAll(any(Specification.class), eq(pageable));
-  }
-
-  @Test
-  void should_GetConstructionRequestsList_When_NoFilters() {
-    // Given
-    var pageable = PageRequest.of(0, 10);
-    var request = new BaseFilterRequest(null, null, null);
-    var entity = createMockEntity();
-
-    when(ifRepo.findByStatus_ContractAndStatus_Construction(ProcessingStatus.APPROVED, ProcessingStatus.PROCESSING,
-      pageable))
-      .thenReturn(new PageImpl<>(List.of(entity)));
-    when(empSrv.getEmployeeNameById(any())).thenReturn(new WrapperApiResponse(200, "OK", "Staff", OffsetDateTime.now()));
-
-    // When
-    var result = service.getConstructionRequestsList(pageable, request);
-
-    // Then
-    assertThat(result.getContent()).hasSize(1);
-    verify(ifRepo).findByStatus_ContractAndStatus_Construction(ProcessingStatus.APPROVED, ProcessingStatus.PROCESSING,
-      pageable);
-  }
-
-  @Test
   void should_ApproveAndAssign_When_StatusIsTrue() {
     // Given
     // Order: formNumber, formCode, status
@@ -369,7 +412,7 @@ class InstallationFormServiceImplTest {
     when(ifRepo.findById(new InstallationFormId("FC01", "FN01"))).thenReturn(Optional.of(entity));
 
     // When
-    service.approveInstallationForm(USER_ID, request);
+    service.reviewInstallationForm(USER_ID, request);
 
     // Then
     assertThat(status.getRegistration()).isEqualTo(ProcessingStatus.APPROVED);
@@ -390,7 +433,7 @@ class InstallationFormServiceImplTest {
     when(ifRepo.findById(new InstallationFormId("FC01", "FN01"))).thenReturn(Optional.of(entity));
 
     // When
-    service.approveInstallationForm(USER_ID, request);
+    service.reviewInstallationForm(USER_ID, request);
 
     // Then
     assertThat(status.getRegistration()).isEqualTo(ProcessingStatus.REJECTED);
@@ -404,7 +447,7 @@ class InstallationFormServiceImplTest {
     when(ifRepo.findById(new InstallationFormId("C-001", "F-001"))).thenReturn(Optional.empty());
 
     // When & Then
-    assertThatThrownBy(() -> service.approveInstallationForm(USER_ID, request))
+    assertThatThrownBy(() -> service.reviewInstallationForm(USER_ID, request))
       .isInstanceOf(IllegalArgumentException.class);
   }
 
